# django-ng-locations

./: .gitignore  ADDING_DATA.md  CHANGELOG.md  CONTRIBUTING.md  DATA_COLLECTION_GUIDE.md  EXAMPLE_USAGE.md  EXTENDED_DATA_README.md  INDEX.md  LICENSE  MANIFEST.in  NEXT_STEPS.md  PROJECT_SUMMARY.md  PUBLISHING.md  QUICKSTART.md  README.md  TESTING_GUIDE.md  convert_to_nested_structure.py  data_collection_helper.py  manage.py  postal_code_scraper_template.py  pyproject.toml  requirements-dev.txt  sample_extended_data.py  setup.py
core/: models.py
django_ng_locations/: __init__.py  admin.py  apps.py  models.py  utils.py
django_ng_locations/fixtures/: nigeria_data.py
django_ng_locations/management/commands/: load_ng_locations.py
django_ng_locations/migrations/: 0001_initial.py
nigeria/: asgi.py  settings.py  urls.py  wsgi.py
