[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "django-ng-locations"
version = "0.1.0"
description = "A comprehensive Django package for Nigerian geographic data (zones, states, LGAs) with models for cities, wards, and postal codes"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Olaniyan Adewale Hafeez", email = "support@techwareinnovation.com"}
]
keywords = ["django", "nigeria", "locations", "states", "lga", "zones", "cities", "wards", "postal-codes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 6.0",
]
dependencies = [
    "Django>=4.0",
]

[project.urls]
Homepage = "https://github.com/abdulhafeez1432/django-ng-locations"
Documentation = "https://github.com/abdulhafeez1432/django-ng-locations#readme"
Repository = "https://github.com/abdulhafeez1432/django-ng-locations"
"Bug Tracker" = "https://github.com/abdulhafeez1432/django-ng-locations/issues"

[tool.setuptools]
packages = ["django_ng_locations"]
include-package-data = true

[tool.setuptools.package-data]
django_ng_locations = [
    "fixtures/*.py",
    "management/commands/*.py",
]

